<resources>
    <string name="app_name">职来</string>

    <string name="lnamehint">请输入用户名</string>
    <string name="lpasswordhint">请输入密码</string>
    <string name="lbutton">登陆</string>
    <string name="lregistry">注册</string>
    <string name="lforget">忘记密码</string>
    <string name="rname">公司名</string>
    <string name="rpassword">密码</string>
    <string name="rconfirmpassword">确认密码</string>
    <string name="rcontactperson">联系人</string>
    <string name="rcontactnumber">联系方式</string>
    <string name="rcontactaddress">公司地址</string>
    <string name="rdescription">简介</string>
    <string name="rnamehint">请输入公司名</string>
    <string name="rpasswordhint">6-12个字符以内</string>
    <string name="rconfirmpasswordhint">请再次输入密码</string>
    <string name="rcontactpersonhint">请输入联系人姓名</string>
    <string name="rcontactnumberhint">请输入联系方式</string>
    <string name="rcontactaddresshint">请输入公司地址</string>
    <string name="rdescriptionhint">请输入简介</string>
    <string name="rbutton">完成</string>
    <string name="release">消息管理</string>
    <string name="chat">聊天</string>
        <string name="personInfo">企业中心</string>
    <string name="chooseTitle">兼职管理</string>
    <string name="status1">招聘信息</string>
    <string name="status2">历史信息</string>
    <string name="status3">发布消息</string>
    <string name="choice1">其他</string>

    <string name="choice2">家教</string>
    <string name="choice3">服务</string>
    <string name="choice4">促销</string>
    <string name="choice5">实习</string>
    <string name="choice6">派单</string>

    <string name="choiceHint">      请选择您需要招的工种</string>

    <string name="releaseTitle"> 兼职信息发布</string>
    <string name="releaseName"> 兼职标题</string>
    <string name="releaseType"> 兼职类型</string>
    <string name="releaseDate"> 工作日期</string>
    <string name="DatePickerHint"> 选择工作日期</string>
    <string name="TimePickerHint1"> 开始工作时间</string>
    <string name="TimePickerHint3"> 结束工作时间</string>

    <string name="TimeLast"> 工作持续时间</string>
    <string name="numberOfEmploy"> 招工人数</string>

    <string name="unit1"> 天</string>
    <string name="unit2"> 人</string>
    <string name="salary"> 薪资</string>

    <string name="releaseHint1"> 请输入招聘标题</string>
    <string name="releaseHint2"> 请选择开始工作的日期</string>
    <string name="releaseHint3"> 请选择开始工作的时间</string>
    <string name="releaseHint4"> 请选择开始工作的时间</string>
    <string name="releaseHint5"> 请输入有效数字</string>

    <string name="genderRequest"> 性别要求</string>
    <string name="experienceRequest"> 经验要求</string>

    <string name="heightRequest"> 身高要求</string>
    <string name="descripton"> 工作描述</string>

    <string name="detail"> 详细信息</string>

    <string name="submit"> 发布</string>


    <string name="workAddress"> 工作地址</string>
    <string name="choiceofAddressButton"> 请选择工作地址</string>

    <string name="personInfoTitle"> 企业中心</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
