<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chooseTitle"
            android:gravity="center"
            android:id="@+id/textView3"
            android:textSize="20dp"
            android:background="#c8fefcfc" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/releaseB1"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/status3"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/onRunB1"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/status1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/timeOutB1"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:text="@string/status2"/>
    </LinearLayout>

    <!--
  <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/view8" />
 -->
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/view8"

        >

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listView1" />
    </FrameLayout>


</LinearLayout>