<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#dbdede"
    tools:context=".com.Activty.MainActivity">


    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/logo1"
        android:layout_below="@+id/registryTV"

        android:layout_marginLeft="5dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
       />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/logo2"
        android:layout_alignTop="@id/logo1"
        android:layout_marginLeft="275dp"
        android:src="@drawable/logo1"/>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="90dp"
        android:background="#dbdede"
        android:layout_centerHorizontal="true"
        android:id="@+id/tableRow">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/name"
            android:layout_marginLeft="1dp"
            android:id="@+id/nameIV"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameET"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:hint="@string/lnamehint"
            android:gravity="center"/>


    </TableRow>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tableRow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/password"
            android:layout_marginLeft="1dp"
            android:id="@+id/passwordIV"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/passwordET"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:hint="@string/lpasswordhint"
            android:gravity="center"/>

    </TableRow>

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/lbutton"
        android:id="@+id/lbutton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#97fbfb"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lregistry"
        android:id="@+id/registryTV"
        android:layout_below="@+id/lbutton"
        android:layout_alignParentStart="true"
        android:textSize="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lforget"
        android:id="@+id/fogetTV"
        android:layout_below="@+id/lbutton"
        android:layout_alignTop="@+id/registryTV"
        android:layout_marginLeft="260dp"/>



</RelativeLayout>
